classDiagram
    direction LR

    %% === PkgApprenants ===
    namespace PkgApprenants {
        class Apprenant {
            +id: int
            +nom: string
            +email: string
            +password: string
        }

        class Groupe {
            +id: int
            +nom: string
        }
    }

    %% === PkgAutoformation ===
    namespace PkgAutoformation {
        class Autoformation {
            +id: int
            +title: Varchar
            +description: text
        }

        class Tutoriel {
            +id: int
            +title: string
            +contenu: text
            +ordre: int
            +course_link: string
        }

        class RealisationAutoformation {
            +id: int
            +statut: enum
        }

        class RealisationTutoriel {
            +id: int
            +Etat: enum
            +github_link: VARCHAR
        }
    }

    %% === PkgCompetences ===
    namespace PkgCompetences {
        class Competence {
            +id: int
            +nom: string
        }

        class Technologie {
            +id: int
            +nom: string
        }
    }
    class Formateur{
        +id: int
        +name: string
        +email: string
        +password: string
    }

    %% === Relationships ===
    Apprenant --> RealisationAutoformation : effectue
    Apprenant --> RealisationTutoriel : effectue
    Apprenant --> Groupe : appartient à

    RealisationTutoriel --> "1" RealisationAutoformation : lié à
    RealisationAutoformation --> "1" Autoformation : concerne

    Autoformation --> "*" Technologie : utilise
    Autoformation --> Tutoriel : contient
    Technologie --> Competence : couvre
    RealisationTutoriel --> Tutoriel : réalise

    Formateur --> Groupe : appartient à
    Formateur --> Autoformation : creé
